Fix radio button alignment

--- a/rdmo/projects/static/projects/css/project_questions.scss
+++ b/rdmo/projects/static/projects/css/project_questions.scss
@@ -88,7 +88,8 @@
         &:last-child label {
             margin-bottom: 0;
         }
-        input[type='checkbox'] {
+        input[type='checkbox'],
+        input[type='radio'] {
             margin-top: 8px;
             margin-left: -25px;
         }
